# autograd

./: .gitignore  README.md  pyproject.toml
autograd/: __init__.py  data.py  init.py  module.py  optimizer.py  tensor.py
examples/: classifier.py  mnist.py
tests/: test_module.py  test_tensor.py
